--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
     stages {
         stage('Clone Repo') {
             steps {
-                git url: 'https://github.com/spandankolhe/python-app-CICD.git', branch: 'master'
+                git url: 'https://github.com/spandankolhe/python-app-CICD.git', branch: 'main'
             }
         }
 
